--- a/pom.xml
+++ b/pom.xml
@@ -130,43 +130,43 @@
 			</plugin>
 
 			<!-- CheckStyle -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
-				<executions>
-					<execution>
-						<id>validate</id>
-						<phase>validate</phase>
-						<configuration>
-							<configLocation>code-standards/checkstyle.xml</configLocation>
-							<encoding>UTF-8</encoding>
-							<consoleOutput>true</consoleOutput>
-							<failsOnError>true</failsOnError>
-						</configuration>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-checkstyle-plugin</artifactId>-->
+				<!--<version>2.17</version>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<id>validate</id>-->
+						<!--<phase>validate</phase>-->
+						<!--<configuration>-->
+							<!--<configLocation>code-standards/checkstyle.xml</configLocation>-->
+							<!--<encoding>UTF-8</encoding>-->
+							<!--<consoleOutput>true</consoleOutput>-->
+							<!--<failsOnError>true</failsOnError>-->
+						<!--</configuration>-->
+						<!--<goals>-->
+							<!--<goal>check</goal>-->
+						<!--</goals>-->
+					<!--</execution>-->
+				<!--</executions>-->
+			<!--</plugin>-->
 
 			<!-- PMD -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>3.6</version>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-pmd-plugin</artifactId>-->
+				<!--<version>3.6</version>-->
+			<!--</plugin>-->
 
 			<!-- FindBugs -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>3.0.4</version>
-				<configuration>
-					<!-- Optional directory to put findbugs xml report -->
-				</configuration>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.codehaus.mojo</groupId>-->
+				<!--<artifactId>findbugs-maven-plugin</artifactId>-->
+				<!--<version>3.0.4</version>-->
+				<!--<configuration>-->
+					<!--&lt;!&ndash; Optional directory to put findbugs xml report &ndash;&gt;-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 		</plugins>
 	</build>
 </project>
