--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,4 +1,6 @@
-database.url=${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/weframeresourceserver
-database.user=${OPENSHIFT_MYSQL_DB_USERNAME}
-database.password=${OPENSHIFT_MYSQL_DB_PASSWORD}
-database.driver.classname=com.mysql.jdbc.Driver
+spring.profiles.active=openshift,orm
+server.port=8080
+database.url=${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/weframeresources
+database.user=${OPENSHIFT_POSTGRESQL_DB_USERNAME}
+database.password=${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
+database.driver.classname=org.postgresql.Driver
