sets log files path

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -4,3 +4,5 @@ database.url=${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/wef
 database.user=${OPENSHIFT_POSTGRESQL_DB_USERNAME}
 database.password=${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
 database.driver.classname=org.postgresql.Driver
+logging.file=resources_server.log
+logging.path=${OPENSHIFT_LOG_DIR}
