--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<hibernate-core.version>5.2.2.Final</hibernate-core.version>
 		<spring-data-jpa.version>1.10.3.RELEASE</spring-data-jpa.version>
 		<postgresql.version>9.4.1212.jre7</postgresql.version>
+		<log4j.version>1.2.17</log4j.version>
 	</properties>
 
 	<dependencies>
@@ -63,7 +64,6 @@
 			<version>${spring-data-jpa.version}</version>
 		</dependency>
 
-
 		<!-- Spring JDBC -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -74,7 +74,6 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>test</scope>
 		</dependency>
 
 		<!-- PostgreSQL -->
@@ -83,7 +82,6 @@
 			<artifactId>postgresql</artifactId>
 			<version>${postgresql.version}</version>
 		</dependency>
-
 
 		<!-- SpringBoot Test -->
 		<dependency>
