--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=openshift,orm
-database.url=${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/weframeresources
+database.url=jdbc:postgresql://${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/weframeresources
 database.user=${OPENSHIFT_POSTGRESQL_DB_USERNAME}
 database.password=${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
 database.driver.classname=org.postgresql.Driver
