Rolls back to MySQL datasource to be able to use phpMyAdmin on the browser

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=openshift,orm
-database.url=jdbc:postgresql://${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/weframeresources
-database.user=${OPENSHIFT_POSTGRESQL_DB_USERNAME}
-database.password=${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
-database.driver.classname=org.postgresql.Driver
+database.url=jdbc:mysql://${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/weframeresources
+database.user=${OPENSHIFT_MYSQL_DB_USERNAME}
+database.password=${OPENSHIFT_MYSQL_DB_PASSWORD}
+database.driver.classname=com.mysql.jdbc.Driver
 logging.path=${OPENSHIFT_LOG_DIR}
