--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<spring-data-jpa.version>1.10.3.RELEASE</spring-data-jpa.version>
 		<postgresql.version>9.2-1004-jdbc41</postgresql.version>
 		<log4j.version>1.2.17</log4j.version>
+		<mysql-connector-java.version>6.0.5</mysql-connector-java.version>
 	</properties>
 
 	<dependencies>
@@ -76,12 +77,13 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
-		<!-- PostgreSQL -->
+		<!-- MySQL -->
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>${postgresql.version}</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-connector-java.version}</version>
 		</dependency>
+
 
 		<!-- SpringBoot Test -->
 		<dependency>
