Initial hateoas support

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -2,5 +2,5 @@ spring.profiles.active=openshift,orm
 database.url=jdbc:mysql://${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/weframeresources
 database.user=${OPENSHIFT_MYSQL_DB_USERNAME}
 database.password=${OPENSHIFT_MYSQL_DB_PASSWORD}
-database.driver.classname=com.mysql.jdbc.Driver
+database.driver.classname=com.mysql.cj.jdbc.Driver
 logging.path=${OPENSHIFT_LOG_DIR}
