--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<postgresql.version>9.2-1004-jdbc41</postgresql.version>
 		<log4j.version>1.2.17</log4j.version>
 		<mysql-connector-java.version>6.0.5</mysql-connector-java.version>
+		<spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version>
 	</properties>
 
 	<dependencies>
@@ -43,6 +44,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- Spring JPA -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring-data-jpa.version}</version>
+		</dependency>
+
+		<!-- Spring HATEOAS -->
+		<dependency>
+			<groupId>org.springframework.hateoas</groupId>
+			<artifactId>spring-hateoas</artifactId>
+			<version>${spring-hateoas.version}</version>
+		</dependency>
+
 
 		<!-- Apache Commons Lang 3 -->
         <dependency>
@@ -56,13 +72,6 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate-core.version}</version>
-		</dependency>
-
-		<!-- Spring JPA -->
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-			<version>${spring-data-jpa.version}</version>
 		</dependency>
 
 		<!-- Spring JDBC -->
@@ -83,7 +92,6 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql-connector-java.version}</version>
 		</dependency>
-
 
 		<!-- SpringBoot Test -->
 		<dependency>
