--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- String Data Rest -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+
 		<!-- Spring Web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
