--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 
-		<skipITs>true</skipITs>
+		<skipITs>false</skipITs>
 
 		<junit.version>4.12</junit.version>
 		<apache.commons.version>3.4</apache.commons.version>
