--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,16 @@
 		<log4j.version>1.2.17</log4j.version>
 		<mysql-connector-java.version>6.0.5</mysql-connector-java.version>
 		<spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version>
+		<aws-java-sdk.version>1.11.86</aws-java-sdk.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>${aws-java-sdk.version}</version>
+		</dependency>
+
 		<!-- String Data Rest -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
