Creates JWT support and enables spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.profiles.active=embedded,orm,local
 server.port=8080
 logging.path=./target/test-logs
 service.user.password.hash.iterations=1000
+security.enabled=true
+security.jwt.expiration.time=864000000
+security.jwt.secret=ThisIsASecret
+security.jwt.token.prefix=Bearer
+security.jwt.header.name=Authorization
