--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -4,3 +4,4 @@ database.password=${OPENSHIFT_MYSQL_DB_PASSWORD}
 database.driver.classname=com.mysql.jdbc.Driver
 
 logging.file=${OPENSHIFT_LOG_DIR}/weframers.log
+tmp.directory=${OPENSHIFT_TMP_DIR}
