--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.profiles.active=embedded,orm,local
 server.port=8080
 logging.path=./target/test-logs
 service.user.password.hash.iterations=1000
+temp.directory=${TEMP}
