Improves image controller functionalities, as well as backboard picture persistence, also generates AWS dependencies configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.profiles.active=embedded,orm,local
 server.port=8080
 logging.path=./target/test-logs
-service.user.password.hash.iterations=1000
+backBoardService.user.password.hash.iterations=1000
 temp.directory=${TEMP}
+picture.file.aws.access.key=ABC
+picture.file.aws.secret.key=DEF
+picture.file.aws.bucket.name=weframe-images
+spring.http.multipart.max-file-size=15MB
+spring.http.multipart.max-request-size=15MB
