--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=embedded,orm,local
 server.port=8080
 logging.path=./target/test-logs
-backBoardService.user.password.hash.iterations=1000
+service.user.password.hash.iterations=1000
 temp.directory=${TEMP}
 picture.file.aws.access.key=ABC
 picture.file.aws.secret.key=DEF
