Fixes properties file issue

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -10,4 +10,4 @@ picture.file.aws.access.key=${AWS_ACCESS_KEY}
 picture.file.aws.secret.key=${AWS_SECRET_KEY}
 picture.file.aws.bucket.name=weframe-images
 spring.http.multipart.max-file-size=15MB
-spring.http.multipart.max-request-size=15MB}
+spring.http.multipart.max-request-size=15MB
