Fixes temp file env variable issue

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -4,7 +4,7 @@ database.password=${OPENSHIFT_MYSQL_DB_PASSWORD}
 database.driver.classname=com.mysql.jdbc.Driver
 
 logging.file=${OPENSHIFT_LOG_DIR}/weframers.log
-tmp.directory=${OPENSHIFT_TMP_DIR
+temp.directory=${OPENSHIFT_TMP_DIR}
 
 picture.file.aws.access.key=${AWS_ACCESS_KEY}
 picture.file.aws.secret.key=${AWS_SECRET_KEY}
