--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<commons-validator.version>1.4.1</commons-validator.version>
 		<h2.version>1.4.195</h2.version>
 		<spring-security-core.version>3.1.0.RELEASE</spring-security-core.version>
+		<thumbnailator.version>0.4.8</thumbnailator.version>
 	</properties>
 
 	<dependencies>
@@ -96,6 +97,12 @@
 			<version>2.5</version>
 		</dependency>
 
+		<!-- Thumbnailator -->
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>${thumbnailator.version}</version>
+		</dependency>
 
 		<!-- SpringBoot Test -->
 		<dependency>
