Finishes thumbnail functionality for picture controller and backboard controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ picture.file.aws.secret.key=DEF
 picture.file.aws.bucket.name=weframe-images
 spring.http.multipart.max-file-size=15MB
 spring.http.multipart.max-request-size=15MB
+picture.file.image.format.name=jpg
+picture.file.thumbnail.suffix=-thumbnail
+picture.file.thumbnail.width=600
+picture.file.thumbnail.height=600
