Improves jwt handling, adds role to token body

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -11,3 +11,9 @@ picture.file.aws.secret.key=${AWS_SECRET_KEY}
 picture.file.aws.bucket.name=weframe-images
 spring.http.multipart.max-file-size=15MB
 spring.http.multipart.max-request-size=15MB
+
+security.enabled=true
+security.jwt.expiration.time=${OPENSHIFT_JWT_EXPIRATION_TIME}
+security.jwt.secret=${OPENSHIFT_JWT_SECRET}
+security.jwt.token.prefix=${OPENSHIFT_JWT_TOKEN_PREFIX}
+security.jwt.header.name=${OPENSHIFT_JWT_HEADER_NAME}
