Adds some auth0 tokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.profiles.active=embedded,orm,local
 server.port=8080
 logging.path=./target/test-logs
+
 service.user.password.hash.iterations=1000
+
 temp.directory=${TEMP}
+
 picture.file.aws.access.key=ABC
 picture.file.aws.secret.key=DEF
 picture.file.aws.bucket.name=weframe-images
@@ -12,3 +15,16 @@ picture.file.image.format.name=jpg
 picture.file.thumbnail.suffix=-thumbnail
 picture.file.thumbnail.width=600
 picture.file.thumbnail.height=600
+
+auth0.domain=weframe.auth0.com
+auth0.issuer=https://weframe.auth0.com/
+auth0.clientId=https://weframe.auth0.com/api/v2/
+auth0.clientSecret=U5iKCBS9c57pVMPdKkTQ5iWRLEbrFka_e1qtW8yYkbNp8BqAoM0ozE1zoIbE43Ug
+auth0.securedRoute=/secured/**
+auth0.base64EncodedSecret=false
+auth0.authorityStrategy=ROLES
+auth0.defaultAuth0ApisecurityEnabled=false
+
+auth0.apiAudience=weframers-api
+
+logging.level.org.springframework.security=DEBUG
