Improves configuration and jwt implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=embedded,orm,local
+spring.profiles.active=embedded,orm,local,jwt
 server.port=8080
 logging.path=./target/test-logs
 service.user.password.hash.iterations=1000
