--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=embedded,orm,local,jwt
 server.port=8080
+server.address=127.0.0.1
 logging.path=./target/test-logs
 service.user.password.hash.iterations=1000
 security.enabled=true
