Removes unused imports, improves security configuration for better testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+# suppress inspection "UnusedProperty" for whole file
 spring.profiles.active=embedded,orm,local,jwt
 server.port=8080
 server.address=127.0.0.1
 logging.path=./target/test-logs
 service.user.password.hash.iterations=1000
-security.enabled=true
-security.jwt.expiration.time=864000000
+security.enabled=false
+security.jwt.expiration.time=864000000000
 security.jwt.secret=ThisIsASecret
 security.jwt.token.prefix=Bearer
 security.jwt.header.name=Authorization
