--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+# suppress inspection "SpellCheckingInspection" for whole file
 # suppress inspection "UnusedProperty" for whole file
 spring.profiles.active=embedded,orm,local,jwt
 server.port=8080
 server.address=127.0.0.1
-logging.path=./target/test-logs
+logging.path=./target/logs
+logging.level.com.weframe=DEBUG
 service.user.password.hash.iterations=1000
 security.enabled=false
 security.jwt.expiration.time=864000000000
